--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     container_name: SW_P9
     image: httpd:latest
     ports:
-      - "80:80"
-      - "8080:8080"
+      - 80:80/tcp
+      - 8080:8080/tcp
     volumes:
       - ./SW/usr/local/apache2/htdocs:/usr/local/apache2/htdocs
       - ./SW/usr/local/apache2/conf:/usr/local/apache2/conf
